second pass findbugs